<?xml version="1.0"?>
<package format="2">
  <name>geo_proto</name>
  <version>0.0.1</version>
  <description>Drone control ROS2 package for Jazzy</description>
  <maintainer email="parallels@todo.todo">parallels</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

